--- a/META.yml
+++ b/META.yml
@@ -25,7 +25,9 @@ no_index:
 requires:
   Class::Utils: 0.03
   Error::Pure: 0.15
+  JSON::XS: 0
   MediaWiki::API: 0
+  Unicode::UTF8: 0
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Wikidata-API/issues
