--- a/META.yml
+++ b/META.yml
@@ -28,6 +28,7 @@ requires:
   JSON::XS: 0
   MediaWiki::API: 0
   Unicode::UTF8: 0
+  Wikidata::Content::Struct: 0
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Wikidata-API/issues
