--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   MediaWiki::API: 0
   Unicode::UTF8: 0
   Wikibase::Datatype: 0.03
+  Wikibase::Datatype::Struct: 0
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Wikibase-API/issues
